[package]
name = "unitrix" # 必须是唯一的，全crates.io范围内
version = "0.0.5"
# Unitrix：通过常量化矩阵实现物理量单位化与2D几何计算规范化。提供零成本抽象，支持no_std环境。
description = "Unitrix: Normalized physical unit management and 2D geometry computing through constified matrices. Delivers zero-cost abstractions with no_std support."
edition = "2024"
rust-version = "1.86.0" # 最低支持的 Rust 编译器版本
authors = ["liuyuan <375798574@qq.com>"]
documentation = "https://docs.rs/unitrix" # 包的在线文档地址（docs.rs 自动生成）
# 项目源代码仓库地址（GitHub）
repository = "https://github.com/liuyuan77/unitrix"
readme = "README.md"  # README 文件路径（用于 crates.io 展示）
keywords = ["unitrix", "SI", "units", "no_std"]  # 关键词列表,最多5个,用于 crates.io 搜索和分类
categories = ["no-std", "science", "value-formatting"] # 包的分类（crates.io 分类）
license = "MIT OR Apache-2.0"  # 必须使用SPDX标识符

[features]
std = []